# crucible

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  crucible.yaml  crucible.yaml.example  pyproject.toml  requirements.txt  train_gpt.py
.crucible/projects/: elastic_lewm.yaml  hybrid_lewm.yaml  lewm.yaml
.crucible/taps/meta-harness/: README.md
autoresearch/: __init__.py  envfile.py  runtime.py  torch_models.py
docs/: _config.yml  architecture.md  crucible-config-hierarchy.md  data-source-plugin-format.md  eval-watcher.md  getting-started.md  harness-optimization.md  hf-collab-recipe.md  index.md  judge-separation.md  mcp-tools.md  modality-guide.md  plugins.md  roadmap.md  ssh-provider.md  tui.md  yolo-mcp-demo.md
docs/cleanup/: 01-dead-code.md  02-circular-deps.md  03-dedup.md  04-type-consolidation.md  05-weak-types.md  06-exceptions.md  07-legacy.md  08-comments.md  BASELINE.md  SUMMARY.md  baseline-mypy.txt  baseline-ruff.txt  baseline-tests-run.txt  baseline-tests.txt
docs/recipes/: hf-collab-parameter-golf.yaml  judge-separated-harness.yaml  synthesis-driven-research.yaml  wandb-tracked-experiment.yaml
docs/superpowers/specs/: 2026-03-29-compression-toolkit-design.md
evaluation/diff_xyz/: harness.py  models.py
evaluation/diff_xyz/runners/: __init__.py  api_smoke.py  sft_smoke.py
examples/: README.md
examples/basic/: crucible.yaml  train.py
examples/diffusion/: README.md  __init__.py  crucible.yaml  data_adapter.py  model.py  train_generic.py
examples/huggingface_finetune/: README.md  crucible.yaml  requirements.txt  train.py
examples/parameter_golf/: crucible.yaml  program.md
examples/ssh_local/: README.md  crucible.yaml  experiments.json  nodes.json.example
examples/workflows/: 2pod_experiment.md  autonomous_research.md  local_smoke.md
examples/world_model/: README.md  __init__.py  crucible.yaml  data_adapter.py  eval_lewm.py  model.py  train_generic.py
examples/yolo_mcp_empty_dir/: .env.example  README.md  crucible.yaml
scripts/: apply_tap_dedup.py  run_crucible_mcp.sh  setup_lewm.sh  test_2pod.py  train_lewm_compressed.py  train_lewm_slim.py
specs/: 3way_validation.json  compression_wave_1.json  compression_wave_2.json  next_batch_combined.json  screen_batch_1.json  screen_batch_2.json  wm_sweep_wave1_smoke.json
src/crucible/: __init__.py
src/crucible/analysis/: __init__.py  export.py  leaderboard.py  results.py
src/crucible/api/: __init__.py  auth.py  models.py  routes.py  server.py
src/crucible/cli/: __init__.py  analyze_commands.py  data_commands.py  fleet_commands.py  hub_commands.py  main.py  mcp_commands.py  note_commands.py  notebook_commands.py  project_commands.py  research_commands.py  run_commands.py  store_commands.py  tap_commands.py  trace_commands.py  track_commands.py
src/crucible/core/: __init__.py  config.py  data_confirm.py  data_sources.py  doom_loop.py  env.py  errors.py  experiment_contract.py  finding.py  fingerprint.py  hf_writer.py  hub.py  hub_lock.py  hub_remotes.py  io.py  log.py  plan.py  plugin_discovery.py  plugin_registry.py  plugin_schema.py  project_template.py  redact.py  store.py  tap.py  types.py
src/crucible/data/: __init__.py  download.py  manifest.py  sync.py
src/crucible/data_sources/: __init__.py  huggingface.py  local_files.py  wandb_artifact.py
src/crucible/fleet/: __init__.py  bootstrap.py  day_run.py  inventory.py  manager.py  monitor.py  project_launchers.py  project_runner.py  provider.py  provider_registry.py  queue.py  scheduler.py  sync.py
src/crucible/mcp/: __init__.py  server.py  tools.py  tracer.py
src/crucible/models/: __init__.py  base.py  composer.py  registry.py
src/crucible/notebook/: __init__.py  exporter.py  runtimes.py  templates.py
src/crucible/research_dag/: __init__.py  bridge.py  dag_state.py  node_format.py
src/crucible/researcher/: __init__.py  analysis.py  batch_design.py  briefing.py  candidate_validation.py  domain_spec.py  evolution_log.py  github_search.py  grpo.py  harness_optimizer.py  (+12 more)
tests/: conftest.py  test_api.py  test_architecture_loading_integration.py  test_architectures.py  test_audit_fixes.py  test_audit_fixes_core.py  test_audit_fixes_infra.py  test_batch_design.py  test_bootstrap_project.py  test_bootstrap_state.py  test_briefing.py  test_callbacks_hooks.py  test_candidate_validation.py  test_cli_commands.py  test_components.py  test_composer_registries.py  test_compression_utils.py  test_config.py  test_crucible_model.py  test_data_adapters.py  test_data_adapters_new.py  test_data_loader.py  test_data_manifest.py  test_data_probe.py  test_data_sources.py  test_data_sources_hf.py  test_data_sources_local.py  test_data_sources_wandb.py  test_design_bridge.py  test_diff_xyz_harness.py  test_diff_xyz_metrics.py  test_diff_xyz_models.py  test_diff_xyz_prompts.py  test_diffusion_example.py  test_domain_spec.py  test_doom_loop.py  test_elastic_lewm.py  test_env.py  test_eval_watcher_backfill.py  test_evolution_log.py  (+95 more)
(+78 files in other folders)
