[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "crucible-ml"
version = "0.1.0"
description = "ML research platform: fleet orchestration, autonomous experimentation, and model zoo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
torch = ["torch>=2.1", "numpy", "sentencepiece"]
anthropic = ["anthropic>=0.30"]
mcp = ["mcp>=1.0"]
wandb = ["wandb"]
data = ["tqdm", "huggingface-hub", "datasets"]
all = ["crucible-ml[torch,anthropic,mcp,wandb,data]"]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
crucible = "crucible.cli.main:main"
crucible-mcp = "crucible.mcp.server:main_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["crucible*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
