[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-ml"
version = "0.2.1-alpha"
description = "ML research platform: fleet orchestration, autonomous experimentation, and model zoo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
torch = ["torch>=2.1", "numpy", "sentencepiece"]
anthropic = ["anthropic>=0.30"]
mcp = ["mcp>=1.0"]
wandb = ["wandb"]
data = ["tqdm", "huggingface-hub", "datasets"]
tui = ["textual>=0.50"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
all = ["crucible-ml[torch,anthropic,mcp,wandb,data,tui,api]"]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
crucible = "crucible.cli.main:main"
crucible-mcp = "crucible.mcp.server:main_cli"
crucible-tui = "crucible.tui.app:main"
crucible-api = "crucible.api.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["crucible*"]

[tool.setuptools.package-data]
"crucible.templates.projects" = ["*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
